--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohamed Empire | Pro & Earn</title>
+    <title>Mohamed Empire | Pro Edition</title>
     <link rel="icon" href="https://img.icons8.com/flat-round/64/crown.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -11,32 +11,32 @@
         body, html { margin: 0; padding: 0; background: var(--bg); color: #fff; font-family: 'Segoe UI', sans-serif; overflow-x: hidden; }
         #starCanvas { position: fixed; top: 0; left: 0; z-index: -1; }
         
-        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.7); backdrop-filter: blur(15px); position: sticky; top:0; z-index: 2000; align-items: center; border-bottom: 1px solid rgba(212,175,55,0.2); }
-        .nav-btn { background: var(--glass); border: 1px solid var(--gold); color: var(--gold); padding: 8px 18px; cursor: pointer; border-radius: 25px; transition: 0.3s; }
+        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.8); backdrop-filter: blur(15px); position: sticky; top:0; z-index: 2000; align-items: center; border-bottom: 1px solid rgba(212,175,55,0.2); }
+        .nav-btn { background: var(--glass); border: 1px solid var(--gold); color: var(--gold); padding: 8px 18px; cursor: pointer; border-radius: 25px; transition: 0.3s; font-size: 14px; }
 
-        .logo-container { text-align: center; margin: 30px 0; }
-        .main-logo { font-size: 3.5em; color: var(--gold); text-shadow: 0 0 20px rgba(212, 175, 55, 0.5); }
+        .logo-container { text-align: center; margin: 25px 0; }
+        .main-logo { font-size: 3.5em; color: var(--gold); text-shadow: 0 0 20px rgba(212, 175, 55, 0.5); margin: 0; }
 
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); gap: 15px; width: 95%; max-width: 1000px; margin: auto; padding-bottom: 30px; }
+        /* معرض الصور (الأنمي) */
+        .anime-section { text-align: center; margin: 10px auto 30px; width: 90%; max-width: 450px; }
+        .anime-card { position: relative; cursor: pointer; border: 2px solid var(--gold); border-radius: 20px; overflow: hidden; box-shadow: 0 0 20px rgba(212, 175, 55, 0.3); background: #111; height: 250px; }
+        .anime-card img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s; }
+        .anime-hint { position: absolute; bottom: 10px; left: 10px; background: rgba(0,0,0,0.7); color: var(--gold); padding: 5px 12px; border-radius: 10px; font-size: 11px; }
+
+        .search-container { width: 90%; max-width: 400px; margin: 0 auto 30px; position: relative; }
+        .search-container input { width: 100%; padding: 12px 45px; border-radius: 25px; border: 1px solid var(--gold); background: rgba(0,0,0,0.5); color: white; outline: none; box-sizing: border-box; }
+        .search-container i { position: absolute; right: 15px; top: 15px; color: var(--gold); }
+
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); gap: 15px; width: 95%; max-width: 1000px; margin: auto; }
         .item { background: var(--glass); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
         .item:hover { border-color: var(--gold); transform: translateY(-5px); background: rgba(212, 175, 55, 0.1); }
         .item i { font-size: 28px; color: var(--gold); margin-bottom: 10px; display: block; }
+        .item.hidden { display: none; }
 
-        /* زر الدعم المادي الجديد */
-        .support-section { text-align: center; margin: 40px 0; padding: 20px; }
-        .support-btn { 
-            background: linear-gradient(45deg, #d4af37, #f1c40f); 
-            color: black; 
-            padding: 15px 35px; 
-            border-radius: 30px; 
-            text-decoration: none; 
-            font-weight: bold; 
-            font-size: 1.2em; 
-            box-shadow: 0 0 20px rgba(212, 175, 55, 0.5);
-            transition: 0.3s;
-            display: inline-block;
-        }
-        .support-btn:hover { transform: scale(1.1); box-shadow: 0 0 30px var(--gold); }
+        /* أزرار المال والدعم */
+        .earn-section { text-align: center; margin: 50px 0; padding: 20px; background: rgba(212, 175, 55, 0.05); }
+        .support-btn { background: var(--gold); color: black; padding: 12px 25px; border-radius: 25px; text-decoration: none; font-weight: bold; display: inline-block; transition: 0.3s; }
+        .support-btn:hover { transform: scale(1.1); box-shadow: 0 0 20px var(--gold); }
 
         .modal { display: none; position: fixed; z-index: 3000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); }
         .modal-content { position: relative; width: 95%; height: 90%; margin: 2% auto; border: 1px solid var(--gold); border-radius: 20px; overflow: hidden; }
@@ -54,14 +54,25 @@
 
     <div class="logo-container"><h1 class="main-logo" id="logoText">محمد</h1></div>
 
+    <div class="anime-section">
+        <div class="anime-card" onclick="changeAnime()">
+            <img id="animeImg" src="https://www.pic.re/image" alt="Anime">
+            <div class="anime-hint" id="animeHint">اضغط لتغيير الصورة 🌀</div>
+        </div>
+    </div>
+
+    <div class="search-container">
+        <i class="fas fa-search"></i>
+        <input type="text" id="searchInput" onkeyup="searchApps()" placeholder="ابحث عن لعبة أو تطبيق...">
+    </div>
+
     <div class="grid" id="appGrid"></div>
 
-    <div class="support-section">
-        <h3 style="color: var(--gold); margin-bottom: 15px;">هل أعجبك عملي؟</h3>
+    <div class="earn-section">
+        <h3 id="earnTitle">ادعم إمبراطورية محمد</h3>
         <a href="https://www.buymeacoffee.com/" target="_blank" class="support-btn">
-            <i class="fas fa-coffee"></i> ادعمني بمبلغ بسيط
+            <i class="fas fa-hand-holding-usd"></i> ادعمني الآن
         </a>
-        <p style="font-size: 0.8em; margin-top: 10px; opacity: 0.7;">شكراً لدعمك لإمبراطورية محمد!</p>
     </div>
 
     <div id="gameModal" class="modal">
@@ -76,8 +87,31 @@
             { id: 'sn', icon: 'fas fa-gamepad', ar: 'الثعبان', en: 'Snake', url: 'snake.html' },
             { id: 'xo', icon: 'fas fa-times', ar: 'X-O', en: 'Tic Tac Toe', url: 'xo.html' },
             { id: 'rc', icon: 'fas fa-car', ar: 'السباق', en: 'Racing', url: 'race.html' },
-            { id: 'cl', icon: 'fas fa-calculator', ar: 'الحاسبة', en: 'Calculator', url: 'calc.html' }
+            { id: 'gm', icon: 'fas fa-gem', ar: 'الجواهر', en: 'Gems', url: 'gems.html' },
+            { id: 'sh', icon: 'fas fa-crosshairs', ar: 'الصائد', en: 'Shooter', url: 'shooter.html' },
+            { id: 'jp', icon: 'fas fa-arrow-up', ar: 'القفز', en: 'Jump', url: 'jump.html' },
+            { id: 'mm', icon: 'fas fa-brain', ar: 'الذاكرة', en: 'Memory', url: 'memory.html' },
+            { id: 'cl', icon: 'fas fa-calculator', ar: 'الحاسبة', en: 'Calculator', url: 'calc.html' },
+            { id: 'nt', icon: 'fas fa-sticky-note', ar: 'ملاحظات', en: 'Notes', url: 'notes.html' }
         ];
+
+        function changeAnime() {
+            const img = document.getElementById('animeImg');
+            img.style.opacity = '0.3';
+            setTimeout(() => {
+                img.src = "https://www.pic.re/image?" + new Date().getTime();
+                img.style.opacity = '1';
+            }, 300);
+        }
+
+        function searchApps() {
+            let filter = document.getElementById('searchInput').value.toLowerCase();
+            let items = document.getElementsByClassName('item');
+            for (let item of items) {
+                let text = item.innerText.toLowerCase();
+                item.classList.toggle('hidden', !text.includes(filter));
+            }
+        }
 
         function renderApps() {
             const grid = document.getElementById('appGrid');
@@ -93,6 +127,7 @@
             document.documentElement.dir = currentLang === 'ar' ? 'rtl' : 'ltr';
             document.getElementById('logoText').innerText = currentLang === 'ar' ? 'محمد' : 'MOHAMED';
             document.getElementById('langBtn').innerText = currentLang === 'ar' ? 'English' : 'العربية';
+            document.getElementById('earnTitle').innerText = currentLang === 'ar' ? 'ادعم إمبراطورية محمد' : 'Support Mohamed Empire';
             renderApps();
         }
 
@@ -104,12 +139,12 @@
         let stars = [];
         function initStars() {
             canvas.width = window.innerWidth; canvas.height = window.innerHeight;
-            stars = Array.from({length: 80}, () => ({x: Math.random()*canvas.width, y: Math.random()*canvas.height, s: Math.random()*1.2}));
+            stars = Array.from({length: 80}, () => ({x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random()*1.2}));
         }
         function drawStars() {
             ctx.clearRect(0,0,canvas.width, canvas.height);
             ctx.fillStyle = "#d4af37";
-            stars.forEach(s => { ctx.beginPath(); ctx.arc(s.x, s.y, s.s, 0, Math.PI*2); ctx.fill(); s.y += 0.3; if(s.y > canvas.height) s.y = 0; });
+            stars.forEach(s => { ctx.beginPath(); ctx.arc(s.x, s.y, s.r, 0, Math.PI*2); ctx.fill(); s.y += 0.3; if(s.y > canvas.height) s.y = 0; });
             requestAnimationFrame(drawStars);
         }
 
